@@ -40,6 +40,7 @@
 package org.dspace.app.webui.util;
 
 import java.io.IOException;
+import java.sql.SQLException;
 import java.util.Iterator;
 
 import javax.servlet.ServletException;
@@ -48,6 +49,7 @@ import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 
 import org.apache.log4j.Logger;
+import org.dspace.authorize.AuthorizeManager;
 import org.dspace.core.Context;
 import org.dspace.core.LogManager;
 import org.dspace.eperson.EPerson;
@@ -251,6 +253,22 @@ public class Authenticate
         HttpSession session = request.getSession();
 
         context.setCurrentUser(eperson);
+        
+        boolean isAdmin = false;
+        
+        try
+        {
+            isAdmin = AuthorizeManager.isAdmin(context);
+        }
+        catch (SQLException se)
+        {
+            log.warn("Unable to use AuthorizeManager " + se);
+        }
+        finally 
+        {
+            request.setAttribute("is.admin", new Boolean(isAdmin));
+        }
+    
 
         // We store the current user in the request as an EPerson object...
         request.setAttribute("dspace.current.user", eperson);
@@ -279,6 +297,7 @@ public class Authenticate
         HttpSession session = request.getSession();
 
         context.setCurrentUser(null);
+        request.removeAttribute("is.admin");
         request.removeAttribute("dspace.current.user");
         session.removeAttribute("dspace.current.user.id");
     }
